// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressForm /> renders the component 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      />
      <div
        class="firstname"
      >
        <div
          class="root"
        >
          <label
            for="firstname"
          >
            <span
              class="label"
            >
              First Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="firstname"
                name="firstname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="lastname"
      >
        <div
          class="root"
        >
          <label
            for="lastname"
          >
            <span
              class="label"
            >
              Last Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="lastname"
                name="lastname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="street0"
      >
        <div
          class="root"
        >
          <label
            for="street0"
          >
            <span
              class="label"
            >
              Street
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="street0"
                name="street0"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="city"
      >
        <div
          class="root"
        >
          <label
            for="city"
          >
            <span
              class="label"
            >
              City
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="city"
                name="city"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="country"
      >
        <div
          class="root"
        >
          <label
            for="country"
          >
            <span
              class="label"
            >
              Country
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <select
                class="input"
                id="country"
                name="country_code"
              >
                <option
                  value="RO"
                >
                  Romania
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </span>
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="region_code"
      >
        <div
          class="root"
        >
          <label
            for="region_code"
          >
            <span
              class="label"
            >
              State
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="region_code"
                name="region_code"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="postcode"
      >
        <div
          class="root"
        >
          <label
            for="postcode"
          >
            <span
              class="label"
            >
              ZIP
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="postcode"
                name="postcode"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="telephone"
      >
        <div
          class="root"
        >
          <label
            for="telephone"
          >
            <span
              class="label"
            >
              Phone
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="telephone"
                name="telephone"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="validation"
      />
      <div
        class="error"
      />
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        />
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AddressForm /> renders the component with address select 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      >
        Address
      </h2>
      <div
        class="address_select"
      >
        <div
          class="root"
        >
          <label>
            <span
              class="label"
            >
              Use Saved Address
            </span>
          </label>
          <div
            class="root"
          >
            <span
              class="root"
            >
              <span
                class="input"
              >
                <select
                  class="input"
                  name="address_select"
                >
                  <option
                    value="0"
                  >
                    New Address
                  </option>
                </select>
              </span>
              <span
                class="before"
              />
              <span
                class="after"
              >
                <span
                  class="root"
                >
                  <svg
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="6 9 12 15 18 9"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <p
              class="root"
            />
          </div>
        </div>
      </div>
      <div
        class="firstname"
      >
        <div
          class="root"
        >
          <label
            for="firstname"
          >
            <span
              class="label"
            >
              First Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="firstname"
                name="firstname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="lastname"
      >
        <div
          class="root"
        >
          <label
            for="lastname"
          >
            <span
              class="label"
            >
              Last Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="lastname"
                name="lastname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="street0"
      >
        <div
          class="root"
        >
          <label
            for="street0"
          >
            <span
              class="label"
            >
              Street
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="street0"
                name="street0"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="city"
      >
        <div
          class="root"
        >
          <label
            for="city"
          >
            <span
              class="label"
            >
              City
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="city"
                name="city"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="country"
      >
        <div
          class="root"
        >
          <label
            for="country"
          >
            <span
              class="label"
            >
              Country
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <select
                class="input"
                id="country"
                name="country_code"
              >
                <option
                  value="RO"
                >
                  Romania
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </span>
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="region_code"
      >
        <div
          class="root"
        >
          <label
            for="region_code"
          >
            <span
              class="label"
            >
              State
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="region_code"
                name="region_code"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="postcode"
      >
        <div
          class="root"
        >
          <label
            for="postcode"
          >
            <span
              class="label"
            >
              ZIP
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="postcode"
                name="postcode"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="telephone"
      >
        <div
          class="root"
        >
          <label
            for="telephone"
          >
            <span
              class="label"
            >
              Phone
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="telephone"
                name="telephone"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="validation"
      />
      <div
        class="error"
      >
        form error message
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        />
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AddressForm /> renders the component with address validation message and form error message 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      />
      <div
        class="firstname"
      >
        <div
          class="root"
        >
          <label
            for="firstname"
          >
            <span
              class="label"
            >
              First Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="firstname"
                name="firstname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="lastname"
      >
        <div
          class="root"
        >
          <label
            for="lastname"
          >
            <span
              class="label"
            >
              Last Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="lastname"
                name="lastname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="street0"
      >
        <div
          class="root"
        >
          <label
            for="street0"
          >
            <span
              class="label"
            >
              Street
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="street0"
                name="street0"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="city"
      >
        <div
          class="root"
        >
          <label
            for="city"
          >
            <span
              class="label"
            >
              City
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="city"
                name="city"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="country"
      >
        <div
          class="root"
        >
          <label
            for="country"
          >
            <span
              class="label"
            >
              Country
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <select
                class="input"
                id="country"
                name="country_code"
              >
                <option
                  value="RO"
                >
                  Romania
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </span>
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="region_code"
      >
        <div
          class="root"
        >
          <label
            for="region_code"
          >
            <span
              class="label"
            >
              State
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="region_code"
                name="region_code"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="postcode"
      >
        <div
          class="root"
        >
          <label
            for="postcode"
          >
            <span
              class="label"
            >
              ZIP
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="postcode"
                name="postcode"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="telephone"
      >
        <div
          class="root"
        >
          <label
            for="telephone"
          >
            <span
              class="label"
            >
              Phone
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="telephone"
                name="telephone"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="validation"
      />
      <div
        class="error"
      >
        form error message
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        />
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AddressForm /> renders the component with default address checkbox 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      />
      <div
        class="firstname"
      >
        <div
          class="root"
        >
          <label
            for="firstname"
          >
            <span
              class="label"
            >
              First Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="firstname"
                name="firstname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="lastname"
      >
        <div
          class="root"
        >
          <label
            for="lastname"
          >
            <span
              class="label"
            >
              Last Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="lastname"
                name="lastname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="street0"
      >
        <div
          class="root"
        >
          <label
            for="street0"
          >
            <span
              class="label"
            >
              Street
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="street0"
                name="street0"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="city"
      >
        <div
          class="root"
        >
          <label
            for="city"
          >
            <span
              class="label"
            >
              City
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="city"
                name="city"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="country"
      >
        <div
          class="root"
        >
          <label
            for="country"
          >
            <span
              class="label"
            >
              Country
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <select
                class="input"
                id="country"
                name="country_code"
              >
                <option
                  value="RO"
                >
                  Romania
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </span>
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="region_code"
      >
        <div
          class="root"
        >
          <label
            for="region_code"
          >
            <span
              class="label"
            >
              State
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="region_code"
                name="region_code"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="postcode"
      >
        <div
          class="root"
        >
          <label
            for="postcode"
          >
            <span
              class="label"
            >
              ZIP
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="postcode"
                name="postcode"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="telephone"
      >
        <div
          class="root"
        >
          <label
            for="telephone"
          >
            <span
              class="label"
            >
              Phone
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="telephone"
                name="telephone"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="default_shipping"
      >
        <label
          class="root"
          for="default_shipping"
        >
          <span
            class="icon"
          />
          <input
            class="input"
            id="default_shipping"
            name="default_shipping"
            type="checkbox"
          />
          <span
            class="label"
          >
            Make my default address
          </span>
        </label>
        <p
          class="root"
        />
      </div>
      <div
        class="validation"
      />
      <div
        class="error"
      />
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        />
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AddressForm /> renders the component with save in address book checkbox 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      />
      <div
        class="firstname"
      >
        <div
          class="root"
        >
          <label
            for="firstname"
          >
            <span
              class="label"
            >
              First Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="firstname"
                name="firstname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="lastname"
      >
        <div
          class="root"
        >
          <label
            for="lastname"
          >
            <span
              class="label"
            >
              Last Name
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="lastname"
                name="lastname"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="street0"
      >
        <div
          class="root"
        >
          <label
            for="street0"
          >
            <span
              class="label"
            >
              Street
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="street0"
                name="street0"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="city"
      >
        <div
          class="root"
        >
          <label
            for="city"
          >
            <span
              class="label"
            >
              City
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="city"
                name="city"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="country"
      >
        <div
          class="root"
        >
          <label
            for="country"
          >
            <span
              class="label"
            >
              Country
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <select
                class="input"
                id="country"
                name="country_code"
              >
                <option
                  value="RO"
                >
                  Romania
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </span>
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="region_code"
      >
        <div
          class="root"
        >
          <label
            for="region_code"
          >
            <span
              class="label"
            >
              State
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="region_code"
                name="region_code"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="postcode"
      >
        <div
          class="root"
        >
          <label
            for="postcode"
          >
            <span
              class="label"
            >
              ZIP
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="postcode"
                name="postcode"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="telephone"
      >
        <div
          class="root"
        >
          <label
            for="telephone"
          >
            <span
              class="label"
            >
              Phone
            </span>
          </label>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="telephone"
                name="telephone"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="save_in_address_book"
      >
        <label
          class="root"
          for="save_in_address_book"
        >
          <span
            class="icon"
          />
          <input
            class="input"
            id="save_in_address_book"
            name="save_in_address_book"
            type="checkbox"
          />
          <span
            class="label"
          >
            Save in address book
          </span>
        </label>
        <p
          class="root"
        />
      </div>
      <div
        class="validation"
      />
      <div
        class="error"
      />
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        />
      </button>
    </div>
  </form>
</DocumentFragment>
`;
